--- a/Acertar Num Aleatorio/Acertar Num Aleatorio.vcxproj
+++ b/Acertar Num Aleatorio/Acertar Num Aleatorio.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Acertar Num Aleatorio.cpp" />
+    <ClCompile Include="Partida.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Partida.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
