--- a/Acertar Num Aleatorio/Acertar Num Aleatorio.vcxproj.filters
+++ b/Acertar Num Aleatorio/Acertar Num Aleatorio.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Acertar Num Aleatorio.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="Partida.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Partida.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
